<resources>
    <string name="app_name">UNISC Rides</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="user_session">User Session</string>
    <string name="select_week_day">Select a day of the week</string>
    <string name="select_day_shift">Select a shift of the day</string>
    <string name="avaible_rides">Avaible rides</string>
    <string name="your_rides">Your last rides</string>
    <string name="promiscuous">Promiscuous</string>
    <string name="available_seats">Seats</string>
    <string name="is_promiscuous">Promiscuous</string>
    <string name="is_request">Request</string>
    <string name="my_seats">My seats</string>
    <string-array name="week_days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string-array name="day_shift">
        <item>Morning</item>
        <item>Afternoon</item>
        <item>Night</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="my_chats">My chats</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="select_location">Select location</string>
    <string name="range_distance">Range</string>
</resources>